Added color input and title validation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="subtitle_view">Subtitle</string>
     <string name="note_context_view">Note Context</string>
     <string name="search">Search</string>
+    <string name="pick_your_colour">pick your colour</string>
 </resources>
