Added dropdown menu to pick color

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,12 @@
     <string name="note_context_view">Note Context</string>
     <string name="search">Search</string>
     <string name="pick_your_colour">pick your colour</string>
+
+    <string-array name="dropDrownMenu" >
+        <item> Pick a color for your note </item>
+        <item> Yellow </item>
+        <item> Red </item>
+        <item> Orange </item>
+        <item> Pink </item>
+    </string-array>
 </resources>
