--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="note_context_view">Note Context</string>
     <string name="search">Search</string>
     <string name="pick_your_colour">pick your colour</string>
+    <string name="update">Update</string>
 </resources>
